tests/negative/test_custom_cast_impl_from.orb
eval (sym (t:(type cn)::custom i32));

fnc main () () {
    sym a:t;
    sym (b:i32 a);
};